crates/tests/re_redap_tests/src/tests/snapshots/re_redap_tests__tests__register_segment__out_of_order_properties_segments_data.snap
---
source: crates/tests/re_redap_tests/src/tests/register_segment.rs
expression: filtered_batch.format_snapshot(false)
---
┌──────────────────┬───────────────────┬──────────────────┬──────────────────────────────────────────┐
│ rerun_segment_id ┆ rerun_layer_names ┆ rerun_num_chunks ┆ property:text_log:TextLog:text           │
╞══════════════════╪═══════════════════╪══════════════════╪══════════════════════════════════════════╡
│ my_segment_id1   ┆ [prop2, prop1]    ┆ 2                ┆ [I was logged first, registered last, s… │
└──────────────────┴───────────────────┴──────────────────┴──────────────────────────────────────────┘
